# cmake-template

./: .appveyor.yml  .gitignore  .travis.yml  CMakeLists.txt  README.md
src/: CMakeLists.txt  MyClass.cpp  MyClass.hpp
test/: CMakeLists.txt  MyClass.spec.cpp
